fix navbar alignment problems
Former-commit-id: 17e18ba69856cfc0a0cd0ddf3c69ed3336dd85ac

--- a/css/igv.css
+++ b/css/igv.css
@@ -498,6 +498,7 @@
   height: 32px;
   line-height: 32px; }
   .igv-nav-bar-left-container .igv-logo {
+    all: initial;
     width: 34px;
     height: 32px;
     margin-right: 8px; }
